[gd_scene load_steps=12 format=3 uid="uid://bs4rndsusfiwu"]

[ext_resource type="Script" uid="uid://kplcdo3ey3hg" path="res://scripts/player_scripts/player/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://bf0ifkw3qs0q" path="res://assets/sprites/player/default1.png" id="2_5gtgg"]
[ext_resource type="Texture2D" uid="uid://bf2ytvqbonvqq" path="res://assets/sprites/misc/player_hitbox.png" id="3_dqkch"]
[ext_resource type="Texture2D" uid="uid://tpqa7p1aa7oo" path="res://assets/sprites/player/default2.png" id="3_h17s1"]
[ext_resource type="Script" uid="uid://cvyilijwbd2jk" path="res://scripts/player_scripts/attack/player_attack_laser.gd" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://b4qs7bfce8d5p" path="res://assets/sprites/player/default3.png" id="4_je7p5"]
[ext_resource type="Texture2D" uid="uid://coymg2kxifqb0" path="res://assets/sprites/player/default4.png" id="5_fm80t"]
[ext_resource type="Script" uid="uid://blyxyxfvlmpk7" path="res://scripts/player_scripts/attack/player_attack_explosive.gd" id="5_qlg0r"]
[ext_resource type="Texture2D" uid="uid://vxguijslig4r" path="res://assets/sprites/player/default5.png" id="6_gx1jg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ugbui"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5gtgg")
}, {
"duration": 1.0,
"texture": ExtResource("3_h17s1")
}, {
"duration": 1.0,
"texture": ExtResource("4_je7p5")
}, {
"duration": 1.0,
"texture": ExtResource("5_fm80t")
}, {
"duration": 1.0,
"texture": ExtResource("6_gx1jg")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g2els"]
radius = 2.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_g2els")

[node name="Animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ugbui")
frame_progress = 0.538147

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_g2els")

[node name="HitboxSprite" type="Sprite2D" parent="Hitbox"]
visible = false
position = Vector2(1.19209e-07, 1.19209e-07)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_dqkch")

[node name="PlayerAttackLaser" type="Node2D" parent="."]
script = ExtResource("3_qhqgy")

[node name="FireRateTimer" type="Timer" parent="PlayerAttackLaser"]

[node name="PlayerAttackExplosive" type="Node2D" parent="."]
script = ExtResource("5_qlg0r")

[node name="FireRateTimer" type="Timer" parent="PlayerAttackExplosive"]

[node name="InvincibilityTimer" type="Timer" parent="."]

[connection signal="timeout" from="PlayerAttackLaser/FireRateTimer" to="PlayerAttackLaser" method="_on_fire_rate_timer_timeout"]
[connection signal="timeout" from="PlayerAttackExplosive/FireRateTimer" to="PlayerAttackExplosive" method="_on_fire_rate_timer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
